--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,10 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+.idea
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+v2ray-tracing.exe
+v2ray-tracing
